--- a/ritesh.css
+++ b/ritesh.css
@@ -10,8 +10,117 @@ body{
     background-size: cover;
     background-blend-mode: darken;
 }
+.navbar{
+    display: flex;
+    background:rgba(0, 0, 0, 0.7) url('./background.jpg');
+    background-size: cover;
+    background-blend-mode: darken;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    cursor: pointer;
+    
+}
+.navlist{
+    width: 78%;
+    display: flex;
+    align-items: center;
+   
+}
+.burger{
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 15px;
+    
+}
+.line{
+    width: 33px;
+    background-color: white;
+    height: 4px;
+    margin: 5px 3px;
+}
+.navlist li{
+    list-style: none;
+    padding: 10px 10px;
+    font-size: 25px;
+    align-items: center;
+}
+.navlist a{
+    text-decoration: none;
+    color: white;
+    
+}
+
+.navlist a:hover{
+    color: grey;
+    
+}
+.rightnav{
+    width: 25%;
+    padding: 20px;
+    text-align: right;
+}
+#Search{
+    padding: 5px;
+    font-size: 17px;
+    border: 2px solid grey;
+    border-radius: 9px;
+    width: 60%;
+
+}
+.btn{
+    padding: 8px 20px;
+    margin: 7px 7px;
+    border: 2px solid white;
+    border-radius: 8px;
+    font-size: 16px;
+    background: none;
+    color: white;
+    cursor: pointer;
+    
+}
+.btn-sm{
+    padding: 10px 10px;
+    vertical-align: middle;
+    
+}
+.icon{
+    border-radius: 50%;
+}
+.logo{
+    display: flex;
+    width: -20%;
+    justify-content: center;
+    height: -20%;
+
+
+
+}
+.logo img{
+    width: 23%;
+    border:5px ;
+    border-radius: 50%;
+
+    
+
+    
+
+}
+.vb{
+    padding: 10 10;
+    border: 10 10;
+    font-size: 30px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin-right: 90px;
+    
+}
 center{
-    margin-top: 10%
+    margin-top: 5%
 }
 p1{
     padding: 10px 10px;
@@ -34,16 +143,7 @@ ul{
 
 
 }
-footer{
-    background:rgba(0, 0, 0, 0.7) url('./background.jpg');
-    background-size: cover;
-    background-blend-mode: darken;
-    text-align: end;
 
-    color: white;
-
-
-}
 .container{
     position: absolute;
     bottom: 10px;
@@ -53,4 +153,144 @@ footer{
 }
 .text-gray-500{
     color: white;
+}
+@media only screen and (max-width: 1216px){
+
+  
+    .navlist{
+        flex-direction: column;
+        
+        
+    }
+    .navbar{
+        flex-direction: column;
+        position: relative;
+        width: 100%;
+        height: 500px;
+        
+        transition: all 0.7s ease-out;
+        
+    }
+    
+    
+    .rightnav{
+        text-align: center;
+        align-content: center;
+        width: 50%;
+        
+        
+    }
+    .logo{
+        height: 50%;
+        width: 50%;
+        border-radius: 50%;
+        
+    }
+    .vb{
+       padding: 5px 5px;
+       text-align: center;
+       margin-right: 0px;
+       font-size: x-large;
+       
+    }
+    .box-main{
+        max-width: 75%;
+    }
+    .firstsection{
+        height: fit-content;
+        width: fit-content;
+    }
+    .navlist{
+        width: 100%;
+    }
+  
+    .background{
+        width: 100%;
+    }
+
+    .burger{
+        display: block;
+    }
+    .h-nav-resp{
+        height: 72px;
+    }
+    .v-class-resp{
+        opacity: 0;
+    }
+    .secleft{
+        flex-direction: column;
+    }
+    .secright{
+        flex-direction: column;
+    }
+    .thumbnail img{
+        align-content: center;
+        width: 30%;
+        height: 30%;
+        padding: 0 0;
+        margin: 0 0;
+    }
+ 
+    .contact{
+        flex-direction: row;
+        position: relative;
+        
+        height: fit-content
+        
+    }
+    #name{
+        width: 60%;
+    }
+    .secright{
+        height: fit-content;
+    }
+    .secleft{
+        height: fit-content;
+    }
+    #cmt{
+        width: 80%;
+        height: 20%;
+    }
+    .paras{
+        padding: 0 0;
+    }
+    .footer{
+        height: fit-content;
+    }
+    #Search{
+        width: 80%;
+    }
+    .btn-sm{
+        align-items: center;
+        align-content: center;
+    }
+    .text-big{
+        font-size: x-large;
+    }
+    .text-small{
+        font-size: medium;
+    }
+    .footer{
+        font-size: medium;
+    }
+    .imgfluid{
+        text-align: center;
+    }
+    .thumbnail{
+        margin: 0 0;
+        padding: 5% 0;
+        text-align: center;
+    }
+    .navlist li{
+        font-size: larger;
+    }
+    .btn{
+        width: max-content;
+        height: max-content;
+        padding: 5px 5px;
+    }
+    .container{
+        height: fit-content;
+        width: fit-content;
+    }
 }
