--- a/ritesh.css
+++ b/ritesh.css
@@ -28,14 +28,7 @@ body{
     align-items: center;
    
 }
-.burger{
-    display: none;
-    position: absolute;
-    cursor: pointer;
-    right: 5%;
-    top: 15px;
-    
-}
+
 .line{
     width: 33px;
     background-color: white;
@@ -92,13 +85,15 @@ body{
 }
 .logo{
     display: flex;
-    width: -20%;
+    width: 20%;
     justify-content: center;
-    height: -20%;
-
+    height: 20%;
 
 
 }
+
+
+
 .logo img{
     width: 23%;
     border:5px ;
@@ -116,11 +111,12 @@ body{
     color: white;
     display: flex;
     justify-content: center;
-    margin-right: 90px;
+    
     
 }
 center{
-    margin-top: 5%
+    margin-top: 2%;
+    padding: 2%;
 }
 p1{
     padding: 10px 10px;
@@ -157,20 +153,8 @@ ul{
 @media only screen and (max-width: 1216px){
 
   
-    .navlist{
-        flex-direction: column;
-        
-        
-    }
-    .navbar{
-        flex-direction: column;
-        position: relative;
-        width: 100%;
-        height: 500px;
-        
-        transition: all 0.7s ease-out;
-        
-    }
+ 
+
     
     
     .rightnav{
@@ -208,9 +192,7 @@ ul{
         width: 100%;
     }
 
-    .burger{
-        display: block;
-    }
+    
     .h-nav-resp{
         height: 72px;
     }
