--- a/style.css
+++ b/style.css
@@ -174,6 +174,25 @@ html{
     margin-top: 20px;
     margin-left: 100px;
 }
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555;
+  }
 
 
 .vb{
@@ -331,6 +350,7 @@ html{
     }
     .secright{
         flex-direction: column;
+        padding: 0 0;
     }
     .thumbnail img{
         align-content: center;
