--- a/ritesh.css
+++ b/ritesh.css
@@ -104,6 +104,12 @@ body{
     
 
 }
+ol{
+    
+
+    width: 20%;
+    margin: 0 0;
+}
 .vb{
     padding: 10 10;
     border: 10 10;
@@ -111,7 +117,8 @@ body{
     color: white;
     display: flex;
     justify-content: center;
-    
+    width: 20%;
+    margin: 0 0;
     
 }
 center{
