--- a/ritesh.css
+++ b/ritesh.css
@@ -148,7 +148,7 @@ ul{
 }
 
 .container{
-    position: absolute;
+    position: unset;
     bottom: 10px;
     width: 100%;
     color: white;
@@ -168,14 +168,20 @@ ul{
         text-align: center;
         align-content: center;
         width: 50%;
+    
         
         
     }
     .logo{
-        height: 50%;
-        width: 50%;
+        height: 40%;
+        width: 40%;
         border-radius: 50%;
         
+    }
+    .photo{
+        height: 20%;
+        width: 20%;
+        border-radius: 50%;
     }
     .vb{
        padding: 5px 5px;
